add icon and small tweaks

--- a/ios/ToastE_UI/Info.plist
+++ b/ios/ToastE_UI/Info.plist
@@ -47,5 +47,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Connection to Toaster</string>
 </dict>
 </plist>
