--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "buffer": "^6.0.3",
+    "convert-string": "^0.1.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-ble-manager": "^11.1.0",
