--- a/ios/Toast-E.xcodeproj/xcshareddata/xcschemes/ToastE_UI.xcscheme
+++ b/ios/Toast-E.xcodeproj/xcshareddata/xcschemes/ToastE_UI.xcscheme
@@ -57,9 +57,18 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ToastE_UI.app"
             BlueprintName = "ToastE_UI"
-            ReferencedContainer = "container:ToastE_UI.xcodeproj">
+            ReferencedContainer = "container:Toast-E.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "ToastE_UI.app"
+            BlueprintName = "ToastE_UI"
+            ReferencedContainer = "container:ToastE_UI.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,6 +86,15 @@
             ReferencedContainer = "container:ToastE_UI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "ToastE_UI.app"
+            BlueprintName = "ToastE_UI"
+            ReferencedContainer = "container:ToastE_UI.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
